# 0xCB-media

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: 01-hardware.md  02-firmware-stack.md  03-probe-rs.md  04-host-integration.md  05-architecture.md  06-implementation-notes.md  sources.md
firmware/: Cargo.toml  build.rs  memory.x
firmware/src/: display.rs  input.rs  led.rs  main.rs  state.rs  storage.rs  usb.rs
host/: Cargo.toml
proto/: Cargo.toml
proto/src/: lib.rs
