[package]
name = "host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "0xCB-media Linux daemon: streams PipeWire volume + an audio visualizer to the macropad over USB CDC ACM."

# Both binaries live under src/bin/ — cargo auto-detects them by file name.
#   src/bin/0xcb-media-host.rs        → the daemon
#   src/bin/0xcb-media-test-send.rs   → manual postcard frame sender

[dependencies]
proto = { path = "../proto" }

anyhow = "1"
postcard = "1"
serialport = "4"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio visualizer: capture default sink monitor, FFT, send 8-band magnitudes.
arc-swap = "1"
realfft = "3"
pipewire = "0.8"
libspa = "0.8"
