[package]
name = "proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Shared wire-protocol types between 0xCB-media firmware and host."

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1", default-features = false }
